--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,19 @@
     ],
     "require": {
         "symfony/flex": "^1.12",
-        "symfony/framework-bundle": "^5.2",
-        "symfony/dotenv": "^5.2",
-        "symfony/yaml": "^5.2",
-        "symfony/console": "^5.2",
-        "sensio/framework-extra-bundle": "^6.1",
-        "symfony/twig-bundle": "^5.2",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "symfony/form": "^5.2",
-        "symfony/validator": "^5.2",
-        "ext-json": "*"
+        "symfony/framework-bundle": "5.2.*",
+        "symfony/dotenv": "5.2.*",
+        "symfony/yaml": "5.2.*",
+        "symfony/console": "5.2.*",
+        "sensio/framework-extra-bundle": "6.1.*",
+        "symfony/twig-bundle": "5.2.*",
+        "twig/extra-bundle": "^3.0",
+        "twig/twig": "^3.0",
+        "symfony/form": "5.2.*",
+        "symfony/validator": "5.2.*",
+        "ext-json": "*",
+        "symfony/asset": "5.2.*",
+        "symfony/webpack-encore-bundle": "^1.16"
     },
     "autoload": {
         "psr-4": {
