--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "devDependencies": {
-        "@symfony/stimulus-bridge": "^2.0.0",
-        "@symfony/webpack-encore": "^1.0.0",
+        "@hotwired/stimulus": "^3.0.0",
+        "@symfony/stimulus-bridge": "^3.0.0",
+        "@symfony/webpack-encore": "^4.1.2",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
-        "stimulus": "^2.0.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -18,6 +18,6 @@
     "dependencies": {
         "bootstrap": "^4.6.0",
         "jquery": "^3.6.0",
-        "popper": "^1.0.1"
+        "popper.js": "^1.16.1"
     }
 }
