--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -1,7 +1,7 @@
 framework:
     cache:
         # Unique name of your app: used to compute stable namespaces for cache keys.
-        prefix_seed: anpoltanov/sane_php_frontend
+        prefix_seed: sane_php_frontend
 
         # The "app" cache stores to the filesystem by default.
         # The data in this cache should persist between deploys.
@@ -9,7 +9,7 @@ framework:
 
         # Redis
         app: cache.adapter.redis
-        default_redis_provider: redis://localhost
+        default_redis_provider: redis://sane_php_frontend-redis
 
         # APCu (not recommended with heavy random-write workloads as memory fragmentation can cause perf issues)
         #app: cache.adapter.apcu
