--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,25 @@
         }
     ],
     "require": {
-        "symfony/flex": "^1.12",
-        "symfony/framework-bundle": "5.2.*",
-        "symfony/dotenv": "5.2.*",
-        "symfony/yaml": "5.2.*",
-        "symfony/console": "5.2.*",
+        "php": "^8.1",
+        "ext-json": "*",
+        "symfony/flex": "2.*",
+        "symfony/framework-bundle": "5.4.*",
+        "symfony/dotenv": "5.4.*",
+        "symfony/yaml": "5.4.*",
+        "symfony/console": "5.4.*",
         "sensio/framework-extra-bundle": "6.1.*",
-        "symfony/twig-bundle": "5.2.*",
+        "symfony/twig-bundle": "5.4.*",
         "twig/extra-bundle": "^3.0",
         "twig/twig": "^3.0",
-        "symfony/form": "5.2.*",
-        "symfony/validator": "5.2.*",
-        "ext-json": "*",
-        "symfony/asset": "5.2.*",
+        "symfony/form": "5.4.*",
+        "symfony/validator": "5.4.*",
+        "symfony/asset": "5.4.*",
         "symfony/webpack-encore-bundle": "^1.16"
+    },
+    "require-dev": {
+        "symfony/web-profiler-bundle": "5.4.*",
+        "symfony/debug-bundle": "5.4.*"
     },
     "autoload": {
         "psr-4": {
@@ -42,7 +47,15 @@
     },
     "config": {
         "platform": {
-            "php": "7.2.24"
+            "php": "8.1"
+        },
+        "allow-plugins": {
+            "symfony/flex": true
+        }
+    },
+    "extra": {
+        "symfony": {
+            "require": "5.4.*"
         }
     }
 }
